realized atomic design

--- a/frontend/src/features/i18n/locales/en.json
+++ b/frontend/src/features/i18n/locales/en.json
@@ -1,4 +1,32 @@
 {
+  "appTitle": "Seller Dashboard",
+  "nav.dashboard": "Dashboard",
+  "nav.orders": "Orders",
+  "nav.reviews": "Reviews",
+  "nav.quality": "Quality",
+  "actions.logout": "Log out",
+  "widgets.orders.title": "Orders",
+  "widgets.orders.total": "Total orders",
+  "widgets.reviews.title": "Reviews",
+  "widgets.reviews.avg": "Avg rating",
+  "widgets.reviews.total": "Total reviews",
+  "widgets.quality.title": "Quality",
+  "widgets.quality.onTime": "On-time delivery",
+  "widgets.quality.defects": "Defects",
+  "widgets.quality.returns": "Returns",
+  "widgets.ranking.title": "Top products",
+  "widgets.ranking.sold": "Sold",
+  "widgets.ranking.turnover": "Turnover",
+  "widgets.tips.title": "Tips & alerts",
+  "widgets.tips.info": "Info",
+  "widgets.tips.warning": "Warning",
+  "widgets.tips.success": "Success",
+  "widgets.sales.title": "Sales chart",
+  "widgets.sales.metric.turnover": "Turnover",
+  "widgets.sales.metric.quantity": "Quantity",
+  "widgets.sales.range.7d": "7 days",
+  "widgets.sales.range.30d": "30 days",
+  "widgets.sales.range.90d": "90 days",
   "loginTitle": "Login",
   "loginUsername": "Username",
   "loginPassword": "Password",
