--- a/frontend/src/features/i18n/locales/pl.json
+++ b/frontend/src/features/i18n/locales/pl.json
@@ -1,4 +1,32 @@
 {
+  "appTitle": "Panel sprzedawcy",
+  "nav.dashboard": "Panel",
+  "nav.orders": "Zamówienia",
+  "nav.reviews": "Opinie",
+  "nav.quality": "Jakość",
+  "actions.logout": "Wyloguj",
+  "widgets.orders.title": "Zamówienia",
+  "widgets.orders.total": "Liczba zamówień",
+  "widgets.reviews.title": "Opinie",
+  "widgets.reviews.avg": "Średnia ocena",
+  "widgets.reviews.total": "Liczba opinii",
+  "widgets.quality.title": "Jakość",
+  "widgets.quality.onTime": "Dostawa na czas",
+  "widgets.quality.defects": "Wady",
+  "widgets.quality.returns": "Zwroty",
+  "widgets.ranking.title": "Top produkty",
+  "widgets.ranking.sold": "Sprzedano",
+  "widgets.ranking.turnover": "Obrót",
+  "widgets.tips.title": "Wskazówki i alerty",
+  "widgets.tips.info": "Info",
+  "widgets.tips.warning": "Uwaga",
+  "widgets.tips.success": "Sukces",
+  "widgets.sales.title": "Wykres sprzedaży",
+  "widgets.sales.metric.turnover": "Obrót",
+  "widgets.sales.metric.quantity": "Ilość",
+  "widgets.sales.range.7d": "7 dni",
+  "widgets.sales.range.30d": "30 dni",
+  "widgets.sales.range.90d": "90 dni",
   "loginTitle": "Logowanie",
   "loginUsername": "Użytkownik",
   "loginPassword": "Hasło",
