added tables of quality,orders,reviews

--- a/frontend/src/features/i18n/locales/en.json
+++ b/frontend/src/features/i18n/locales/en.json
@@ -27,6 +27,16 @@
   "widgets.sales.range.7d": "7 days",
   "widgets.sales.range.30d": "30 days",
   "widgets.sales.range.90d": "90 days",
+  "orders.table.id": "Order ID",
+  "orders.table.customer": "Customer",
+  "orders.table.total": "Total",
+  "orders.table.status": "Status",
+  "orders.table.date": "Date",
+  "reviews.title": "Customer reviews",
+  "reviews.total": "Total",
+  "quality.summary.title": "Quality overview",
+  "quality.summary.period": "Period",
+  "quality.summary.score": "Quality score",
   "loginTitle": "Login",
   "loginUsername": "Username",
   "loginPassword": "Password",
