--- a/frontend/src/features/i18n/locales/pl.json
+++ b/frontend/src/features/i18n/locales/pl.json
@@ -27,6 +27,16 @@
   "widgets.sales.range.7d": "7 dni",
   "widgets.sales.range.30d": "30 dni",
   "widgets.sales.range.90d": "90 dni",
+  "orders.table.id": "Nr zamówienia",
+  "orders.table.customer": "Klient",
+  "orders.table.total": "Suma",
+  "orders.table.status": "Status",
+  "orders.table.date": "Data",
+  "reviews.title": "Opinie klientów",
+  "reviews.total": "Łącznie",
+  "quality.summary.title": "Podsumowanie jakości",
+  "quality.summary.period": "Okres",
+  "quality.summary.score": "Wynik jakości",
   "loginTitle": "Logowanie",
   "loginUsername": "Użytkownik",
   "loginPassword": "Hasło",
